Add colored output

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,4 @@ authors = ["Thomas Maurin <maur1th@users.noreply.github.com>"]
 [dependencies]
 serde_json = "1.0"
 ncurses = "5.94.0"
+colored = "1.6"
