--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ readme = "README.md"
 travis-ci = { repository = "maur1th/task_diff", branch = "master" }
 
 [dependencies]
-serde_json = "1.0"
-ncurses = "5.94.0"
 colored = "1.6"
+unescape = "0.1"
+ncurses = "5.94.0"
+serde_json = "1.0"
