Upgrade to Rust 2018

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,12 @@
 [package]
+edition = "2018"
 name = "task_diff"
 description = "Create Terraform AWS Container Definition diffs"
 keywords = ["terraform", "aws", "ecs", "task-definition"]
 categories = ["development-tools"]
 license = "Apache-2.0"
 repository = "https://github.com/maur1th/task_diff"
-version = "0.1.2"
+version = "0.1.3"
 authors = ["Thomas Maurin <maur1th@users.noreply.github.com>"]
 readme = "README.md"
 
