--- a/.travis.yml
+++ b/.travis.yml
@@ -13,10 +13,15 @@ before_deploy:
   - mv target/release/{main,task_diff}
   - bzip2 -f target/release/task_diff
 deploy:
-  skip_cleanup: true
-  provider: releases
-  api_key: $GITHUB_TOKEN
-  file: target/release/task_diff.bz2
-  on:
-    tags: true
-    rust: stable
+  - provider: releases
+    skip_cleanup: true
+    api_key: $GITHUB_TOKEN
+    file: target/release/task_diff.bz2
+    on:
+      tags: true
+      rust: stable
+  - provider: script
+    script: scripts/upload_to_crates_io.sh
+    on:
+      tags: true
+      rust: stable
